# Project-Inverter-with-STM32H7

./: .gitignore  README.md
App/backend/: CMakeLists.txt  CMakeSettings.json  vcpkg.json
App/backend/include/: DataPacket.hpp  StlinkReader.hpp  ZmqPublisher.hpp
App/backend/include/Core/: DataPacket.hpp  RingBuffer.hpp
App/backend/include/Hardware/: StlinkReader.hpp
App/backend/include/IPC/: ZmqPublisher.hpp
App/backend/src/: StlinkReader.cpp  ZmqPublisher.cpp  main.cpp
App/backend/src/Hardware/: StlinkReader.cpp
App/backend/src/IPC/: ZmqPublisher.cpp
App/frontend/: main.py  requirements.txt
App/frontend/gui/: block_mapping.json  config_manager.py  foc_diagram.html  gui_app.py  main.py
App/frontend/gui/controllers/: web_bridge.py
App/frontend/gui/utils/: elf_parser.py
App/frontend/gui/views/: main_window.py  plot_window.py
App/frontend/gui/web_storage/: History  Visited Links
App/frontend/gui/web_storage/DawnGraphiteCache/: data_1  index
App/frontend/gui/web_storage/DawnWebGPUCache/: data_1  index
App/frontend/gui/web_storage/GPUCache/: data_0  data_1  data_2  index
App/frontend/gui/web_storage/Local Storage/leveldb/: LOG  LOG.old
App/frontend/gui/web_storage/Session Storage/: LOG  LOG.old
App/frontend/gui/web_storage/Shared Dictionary/cache/index-dir/: the-real-index
STM32/FOC_H750/: .cproject  .mxproject  .project  FOC_H750.ioc  FOC_H750.launch
STM32/FOC_H750/Core/Inc/: clarke_park.h  foc_config.h  pi_control.h  stm32h7xx_it.h  svpwm.h
STM32/FOC_H750/Core/Src/: clarke_park.c  foc_config.c  inv_park.c  main.c  pi_control.c  scurve_ramp.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  svpwm.c
STM32/TestApp/: .cproject  .mxproject  Test1 Debug.launch  Test1.ioc
STM32/TestApp/Core/Src/: main.c  stm32h7xx_hal_msp.c
config/: README.md
doc/: README.md  ThuyetMinhDoAn2_KS_KTCDT_62_HT.docx
include/: Controll_Loop.h  DefineConst.h  FOC.h  README.md  inv_park.h  pi_2p2z.h  pi_control.h  scurve_ramp.h
lib/: README.md  kalman_filter.h  pi_incremental.h  pi_tustin.h  ramp_soft_start.h  signal_filters.h  svpwm_deadband.h  transform.h
src/: Controll_Loop.c  DefinceConst.c  FOC.c  README.md  pi_2p2z.c  pi_control.c  pi_incremental.c  ramp_soft_start.c  svpwm.c
